--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <section class='layout' id='#layout'>
             <div class="film_container" id='#films'></div>
             <div class="button_container">
-                <button class='button button_prev' id='#buttonPrev'><span class='button_text'>Previous</span.></button>
-                <button class='button button_next' id='#buttonNext'><span class='button_text'>Next</span></button>
+                <button class='button button_prev' id='#buttonPrev'>Previous</button>
+                <button class='button button_next' id='#buttonNext'>Next</button>
                 <button class="button button_exit" id='#buttonExit'>Exit</button>
            </div>
             <div class="session_container" id='#sessions'></div>
